Card transactions completed with Javascript

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
-                        <a href="#" class="logo">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div id="header-center">
                         <nav id="navigation">
@@ -206,7 +206,7 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
                                     <span class="header-card-count">0</span>
                                 </a>
@@ -691,7 +691,7 @@
                 <div class="footer-widgets">
                     <div class="brand-info">
                         <div class="footer-logo">
-                            <a href="#" class="logo">LOGO</a>
+                            <a href="index.html" class="logo">LOGO</a>
                         </div>
                         <div class="footer-desc">
                             <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
@@ -821,6 +821,7 @@
     <!--! footer end -->
 
     <script src="js/main.js" type="module"></script>
+    <script src="js/slider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="js/glide.js" type="module"></script>
 </body>
