--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
                         <i class="bi bi-list"></i>
                     </div>
                     <div id="header-left">
-                        <a href="#" class="logo">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div id="header-center">
                         <nav id="navigation">
@@ -255,6 +255,38 @@
         </div>
     </section>
     <!--! modal search end -->
+
+    <!--! modal dialog start -->
+    <div id="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-close">
+                <i class="bi bi-x"></i>
+            </div>
+            <div class="modal-image">
+                <img src="img/modal-dialog.jpg" alt="">
+            </div>
+            <div class="popup-wrapper">
+                <div class="popup-content">
+                    <div class="popup-title">
+                        <h3>NEWSLETTER</h3>
+                    </div>
+                    <p class="popup-text">
+                        Sign up to our newsletter and get exclusive deals you won find any where else straight to your
+                        inbox!
+                    </p>
+                    <form class="popup-form">
+                        <input type="text" placeholder="Enter Email Address Here">
+                        <button class="btn btn-lg btn-primary">SUBSCRİBE</button>
+                        <label for="popup-checkbox">
+                            <input id="popup-checkbox" type="checkbox">
+                            <span>Don't show this popup again</span>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--! modal dialog end -->
 
     <!--! blogs start -->
     <section id="blogs">
@@ -473,7 +505,7 @@
                 <div class="footer-widgets">
                     <div class="brand-info">
                         <div class="footer-logo">
-                            <a href="#" class="logo">LOGO</a>
+                            <a href="index.html" class="logo">LOGO</a>
                         </div>
                         <div class="footer-desc">
                             <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
