--- a/card.html
+++ b/card.html
@@ -26,10 +26,10 @@
             <div class="container">
                 <div id="header-wrapper">
                     <div id="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
-                        <a href="#" class="logo">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div id="header-center">
                         <nav id="navigation">
@@ -181,7 +181,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <i class="bi bi-x-circle"></i>
+                            <i class="bi bi-x-circle" id="close-sidebar"></i>
                         </nav>
                     </div>
                     <div id="header-right">
@@ -192,7 +192,7 @@
                                 </a>
                             </div>
                             <div id="header-search">
-                                <a href="#">
+                                <a href="#" id="search-button">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </div>
@@ -202,9 +202,9 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
@@ -241,10 +241,42 @@
                     </a>
                 </div>
             </div>
-            <i class="bi bi-x-circle"></i>
+            <i class="bi bi-x-circle" id="close-search"></i>
         </div>
     </section>
     <!--! modal search end -->
+
+    <!--! modal dialog start -->
+    <div id="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-close">
+                <i class="bi bi-x"></i>
+            </div>
+            <div class="modal-image">
+                <img src="img/modal-dialog.jpg" alt="">
+            </div>
+            <div class="popup-wrapper">
+                <div class="popup-content">
+                    <div class="popup-title">
+                        <h3>NEWSLETTER</h3>
+                    </div>
+                    <p class="popup-text">
+                        Sign up to our newsletter and get exclusive deals you won find any where else straight to your
+                        inbox!
+                    </p>
+                    <form class="popup-form">
+                        <input type="text" placeholder="Enter Email Address Here">
+                        <button class="btn btn-lg btn-primary">SUBSCRİBE</button>
+                        <label for="popup-checkbox">
+                            <input id="popup-checkbox" type="checkbox">
+                            <span>Don't show this popup again</span>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--! modal dialog end -->
 
     <!--! card start -->
     <section id="card">
@@ -271,30 +303,6 @@
                                 </tr>
                             </thead>
                             <tbody class="card-wrapper">
-                                <tr class="card-item">
-                                    <td>
-                                        <div class="card-image">
-                                            <img src="img/products/product1/1.png" alt="product1">
-                                            <i class="bi bi-x delete-card"></i>
-                                        </div>
-                                    </td>
-                                    <td>Analogue Resin Strap</td>
-                                    <td>$108.00</td>
-                                    <td class="product-quantity">1</td>
-                                    <td class="product-subtotal">$108.00</td>
-                                </tr>
-                                <tr class="card-item">
-                                    <td>
-                                        <div class="card-image">
-                                            <img src="img/products/product2/1.png" alt="product2">
-                                            <i class="bi bi-x delete-card"></i>
-                                        </div>
-                                    </td>
-                                    <td>Ridley High Waist</td>
-                                    <td>$108.00</td>
-                                    <td class="product-quantity">1</td>
-                                    <td class="product-subtotal">$108.00</td>
-                                </tr>
                             </tbody>
                         </table>
                         <div class="actions-wrapper">
@@ -326,7 +334,7 @@
                                             <li>
                                                 <label>
                                                     Fast Cargo : $15.00
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" id="fast-cargo">
                                                 </label>
                                             </li>
                                             <li>
@@ -338,7 +346,7 @@
                                 <tr>
                                     <th>Total</th>
                                     <td>
-                                        <strong>$316.00</strong>
+                                        <strong id="card-total">$316.00</strong>
                                     </td>
                                 </tr>
                             </tbody>
@@ -449,7 +457,7 @@
                 <div class="footer-widgets">
                     <div class="brand-info">
                         <div class="footer-logo">
-                            <a href="#" class="logo">LOGO</a>
+                            <a href="index.html" class="logo">LOGO</a>
                         </div>
                         <div class="footer-desc">
                             <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
@@ -577,6 +585,9 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
+    <script src="js/card.js" type="module"></script>
 </body>
 
 </html>
