--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
     </footer>
     <!--! footer end -->
 
+    <!-- javascript -->
     <script src="js/main.js" type="module"></script>
     <script src="js/slider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
