--- a/product-details.html
+++ b/product-details.html
@@ -8,6 +8,10 @@
     <!--! Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!--! Glide.js CSS CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css"
+        integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -202,9 +206,9 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
@@ -304,27 +308,38 @@
                     <main class="site-main">
                         <div class="product-gallery">
                             <div class="single-image-wrapper">
-                                <img src="img/products/product2/1.png" class="img-fluid" alt="product2">
+                                <img src="img/products/product2/1.png" id="single-image" class="img-fluid"
+                                    alt="product2">
                             </div>
                             <div class="product-thumb">
-                                <ol class="gallery-thumbs">
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/products/product2/1.png" class="img-fluid active"
-                                                alt="product2">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/products/product2/2.png" class="img-fluid" alt="product2">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/products/product2/3.png" class="img-fluid" alt="product2">
-                                        </a>
-                                    </li>
-                                </ol>
+                                <div class="glide__track" data-glide-el="track">
+                                    <ol class="gallery-thumbs glide__slides">
+                                        <li class="glide__slide">
+                                            <a href="#">
+                                                <img src="img/products/product2/1.png" class="img-fluid active"
+                                                    alt="product2">
+                                            </a>
+                                        </li>
+                                        <li class="glide__slide">
+                                            <a href="#">
+                                                <img src="img/products/product2/2.png" class="img-fluid active"
+                                                    alt="product2">
+                                            </a>
+                                        </li>
+                                        <li class="glide__slide">
+                                            <a href="#">
+                                                <img src="img/products/product2/3.png" class="img-fluid active"
+                                                    alt="product2">
+                                            </a>
+                                        </li>
+                                    </ol>
+                                </div>
+                                <div class="glide__arrows" data-glide-el="controls">
+                                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
+                                            class="bi bi-chevron-left"></i></button>
+                                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i
+                                            class="bi bi-chevron-right"></i></button>
+                                </div>
                             </div>
                         </div>
                         <div class="product-info">
@@ -342,8 +357,8 @@
                                 <span>2 reviews</span>
                             </div>
                             <div class="product-price">
-                                <s>$208</s>
-                                <strong>$165</strong>
+                                <s class="old-price">$208</s>
+                                <strong class="new-price">$165</strong>
                             </div>
                             <p class="product-desc">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -885,6 +900,11 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="muodule"></script>
+    <script src="js/single-product.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="js/glide.js" type="module"></script>
 </body>
 
 </html>
