--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -279,7 +279,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! slider start -->
@@ -823,7 +823,7 @@
     <!-- javascript -->
     <script src="js/main.js" type="module"></script>
     <script src="js/slider.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide" type="module"></script>
     <script src="js/glide.js" type="module"></script>
 </body>
 
