--- a/single-blog.html
+++ b/single-blog.html
@@ -35,7 +35,7 @@
                         <nav id="navigation">
                             <ul id="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link active">
+                                    <a href="index.html" class="menu-link">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -202,9 +202,9 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -275,7 +275,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! single blog start -->
