--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <div id="header-wrapper">
                     <div id="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
                         <a href="index.html" class="logo">LOGO</a>
@@ -191,7 +191,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <i class="bi bi-x-circle"></i>
+                            <i class="bi bi-x-circle" id="close-sidebar"></i>
                         </nav>
                     </div>
                     <div id="header-right">
@@ -202,7 +202,7 @@
                                 </a>
                             </div>
                             <div id="header-search">
-                                <a href="#">
+                                <a href="#" id="search-button">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </div>
@@ -212,9 +212,9 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
@@ -251,13 +251,13 @@
                     </a>
                 </div>
             </div>
-            <i class="bi bi-x-circle"></i>
+            <i class="bi bi-x-circle" id="close-search"></i>
         </div>
     </section>
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -285,7 +285,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! blogs start -->
@@ -633,6 +633,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
