--- a/card.html
+++ b/card.html
@@ -247,7 +247,7 @@
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -275,7 +275,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! card start -->
