--- a/product-details.html
+++ b/product-details.html
@@ -39,7 +39,7 @@
                         <nav id="navigation">
                             <ul id="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link active">
+                                    <a href="index.html" class="menu-link">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -251,7 +251,7 @@
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -279,7 +279,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! single product start -->
@@ -903,7 +903,7 @@
 
     <script src="js/main.js" type="muodule"></script>
     <script src="js/single-product.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide" type="module"></script>
     <script src="js/glide.js" type="module"></script>
 </body>
 
