--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,10 @@
     <!--! Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!--! Glide.js CSS CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css"
+        integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -26,7 +30,7 @@
             <div class="container">
                 <div id="header-wrapper">
                     <div id="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
                         <a href="index.html" class="logo">LOGO</a>
@@ -181,7 +185,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <i class="bi bi-x-circle"></i>
+                            <i class="bi bi-x-circle" id="close-sidebar"></i>
                         </nav>
                     </div>
                     <div id="header-right">
@@ -192,7 +196,7 @@
                                 </a>
                             </div>
                             <div id="header-search">
-                                <a href="#">
+                                <a href="#" id="search-button">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </div>
@@ -202,9 +206,9 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="shop.html">
+                                <a href="card.html" class="header-card-link">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
@@ -241,13 +245,13 @@
                     </a>
                 </div>
             </div>
-            <i class="bi bi-x-circle"></i>
+            <i class="bi bi-x-circle" id="close-search"></i>
         </div>
     </section>
     <!--! modal search end -->
 
     <!--! modal dialog start -->
-    <div id="modal-dialog">
+    <section id="modal-dialog">
         <div class="modal-content">
             <div class="modal-close">
                 <i class="bi bi-x"></i>
@@ -275,7 +279,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--! modal dialog end -->
 
     <!--! categories start  -->
@@ -365,6 +369,30 @@
         </div>
     </section>
     <!--! campaign single end -->
+
+    <!--! products start -->
+    <section class="products">
+        <div class="container">
+            <div class="section-title">
+                <h2>New Arrivals</h2>
+                <p>Summer Collection New Modern Design</p>
+            </div>
+            <div class="product-wrapper glide2">
+                <div class="glide__track" data-glide-el="track">
+                    <ul class="glide__slides product-list"></ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                        <i class="bi bi-chevron-left"></i>
+                    </button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                        <i class="bi bi-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--! products item end -->
 
     <!--! policy start -->
     <section id="policy">
@@ -590,6 +618,10 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide" type="module"></script>
+    <script src="js/glide.js" type="module"></script>
 </body>
 
 </html>
