--- a/product-details.html
+++ b/product-details.html
@@ -313,26 +313,7 @@
                             </div>
                             <div class="product-thumb">
                                 <div class="glide__track" data-glide-el="track">
-                                    <ol class="gallery-thumbs glide__slides">
-                                        <li class="glide__slide">
-                                            <a href="#">
-                                                <img src="img/products/product2/1.png" class="img-fluid active"
-                                                    alt="product2">
-                                            </a>
-                                        </li>
-                                        <li class="glide__slide">
-                                            <a href="#">
-                                                <img src="img/products/product2/2.png" class="img-fluid active"
-                                                    alt="product2">
-                                            </a>
-                                        </li>
-                                        <li class="glide__slide">
-                                            <a href="#">
-                                                <img src="img/products/product2/3.png" class="img-fluid active"
-                                                    alt="product2">
-                                            </a>
-                                        </li>
-                                    </ol>
+                                    <ol class="gallery-thumbs glide__slides"></ol>
                                 </div>
                                 <div class="glide__arrows" data-glide-el="controls">
                                     <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
@@ -902,7 +883,7 @@
     <!--! footer end -->
 
     <script src="js/main.js" type="muodule"></script>
-    <script src="js/single-product.js"></script>
+    <script src="js/product-details.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide" type="module"></script>
     <script src="js/glide.js" type="module"></script>
 </body>
