--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
                 </div>
             </div>
             <div class="slider-buttons">
-                <button onclick="plusSlide(-1)">
+                <button id="slider-button-left">
                     <i class="bi bi-chevron-left"></i>
                 </button>
-                <button onclick="plusSlide(1)">
+                <button id="slider-button-right">
                     <i class="bi bi-chevron-right"></i>
                 </button>
             </div>
