--- a/product-details.html
+++ b/product-details.html
@@ -387,8 +387,9 @@
                                         </div>
                                     </div>
                                     <div class="card-button">
-                                        <input type="number" value="1" min="1">
-                                        <button class="btn btn-lg btn-primary">Add to card</button>
+                                        <input type="number" id="quantity" value="1" min="1">
+                                        <button class="btn btn-lg btn-primary" type="button" id="add-to-card">Add to
+                                            card</button>
                                     </div>
                                     <div class="product-extra-buttons">
                                         <a href="#">
