--- a/product-details.html
+++ b/product-details.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!--! header start -->
+    <!--! head contenter start -->
     <header id="header">
         <div id="global-notification">
             <div class="container">
@@ -428,23 +428,23 @@
                 <div class="single-tabs">
                     <ul class="tab-list">
                         <li>
-                            <a href="#" class="tab-button active">
+                            <a href="#" class="tab-button active" data-id="desc">
                                 Description
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="tab-button">
+                            <a href="#" class="tab-button" data-id="info">
                                 Additional Information
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="tab-button">
+                            <a href="#" class="tab-button" data-id="reviews">
                                 Reviews
                             </a>
                         </li>
                     </ul>
                     <div class="tab-panel">
-                        <div class="tab-panel-desc">
+                        <div class="tab-panel-desc content active" id="desc">
                             <p>
                                 Quisque varius diam vel metus mattis, id aliquam diam rhoncus. Proin vitae magna in dui
                                 finibus malesuada et at nulla. Morbi elit ex, viverra vitae ante vel, blandit feugiat
@@ -465,7 +465,7 @@
                                 New Season Sale
                             </p>
                         </div>
-                        <div class="tab-panel-information">
+                        <div class="tab-panel-information content" id="info">
                             <h3>Additional Information</h3>
                             <table>
                                 <tbody>
@@ -485,7 +485,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="tab-panel-reviews">
+                        <div class="tab-panel-reviews content" id="reviews">
                             <h3>2 reviews for Basic Colored Sweatpants With Elastic Hems
                             </h3>
                             <div class="comments">
