--- a/account.html
+++ b/account.html
@@ -572,6 +572,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
