--- a/single-blog.html
+++ b/single-blog.html
@@ -756,6 +756,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
